--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-	<html lang="pt-br">
-		<head>
-			<meta charset="utf-8"/>
-			<title>Portal de noticias</title>
-		</head>
-	<body>
-
-		<h1>Bem vindo a pagina inicial</h1>
-
-	</body>
+<html lang="en">
+    <head>
+		<meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="stylesheet.css">
+        <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+        <link rel="stylesheet" href="css/icon-font.css">
+        <link rel="shortcut icon" type="image/png" href="images/logo.png">
+        <title>Renan Schmitt</title>
+    </head>
+    <body>
+        <header class="header">
+            <div class="header__text-box">
+                <h1 class="heading-primary">
+                        <span class="heading-primary--main">Renan Schmitt</span>
+                        <span class="heading-primary--sub">Sit and take a coffe</span>
+                </h1>
+                <a href="./noticias" class="btn btn--white btn--animated"> Acessar   </a>
+            </div>
+        </header>   
+    </body>
 </html>
