--- a/app/views/noticias/noticias.ejs
+++ b/app/views/noticias/noticias.ejs
@@ -1,12 +1,112 @@
 <!DOCTYPE html>
-	<html lang="pt-br">
-		<head>
-			<meta charset="utf-8"/>
-			<title>Notícias</title>
-		</head>
-	<body>
+<html>
 
-		<h1>Notícias</h1>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Renan Schmitt</title>
+    
+    <link rel="shortcut icon" href="../../../images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <!-- Bulma Version 0.8.x-->
+    <link rel="stylesheet" href="https://unpkg.com/bulma@0.8.0/css/bulma.min.css" />
+    <link rel="stylesheet" type="text/css" href="../css/blog.css">
+</head>
 
-	</body>
+<body>
+    <!-- START NAV -->
+    <nav class="navbar is-dark">
+        <div class="container">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="../">
+                        <img src="../../../images/logo.png" alt="Logo">
+                        
+                    </a>
+                <span class="navbar-burger burger" data-target="navbarMenu">
+                        <span></span>
+                <span></span>
+                <span></span>
+                </span>
+            </div>
+            <div id="navbarMenu" class="navbar-menu">
+                <div class="navbar-end">
+
+                    <a class="navbar-item  is-active" href="/noticias">
+                           Posts
+                    </a>
+                    <a class="navbar-item" href="https://www.linkedin.com/in/renanschmitt/">
+                        <button class="button is-link">Linkedin</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- END NAV -->
+
+    <section class="hero is-primary is-medium is-bold">
+        <div class="hero-body">
+            <div class="container has-text-centered">
+                <h1 class="title">SIT AND TAKE A COFFE</h1>
+            </div>
+        </div>
+    </section>
+    <section class="articles">
+		
+		<% noticias.forEach(noticia => { %>
+			<div class="column is-8 is-offset-2">
+           
+					<!-- START ARTICLE -->
+				   
+					<div class="media">
+								
+					
+						<article class="message">
+							  
+							<div class="message-header">
+									<figure class="image is-128x128">
+										<img class="is-rounded" src="../../images/avatar.jpg">
+									</figure>
+							  
+									<div class="media-content has-text-centered">
+										<p class="title article-title" style="color: white"><%= noticia.titulo %></p>
+										<div class="tags has-addons level-item">
+											<span class="tag is-rounded is-dark">@Renan Schmitt</span>
+										<span class="tag is-rounded">1 Novembro - 2019</span>
+									</div>
+								</div>
+							</div>
+							<div class="message-body">
+								 <%= noticia.conteudo %>
+							</div>
+						</article>
+					</div>  
+				
+							   
+			   <!-- END ARTICLE -->
+				
+				</div>  
+		<% }) %>
+
+	</section>
+       
+        <script async type="text/javascript" src="../js/bulma.js"></script>
+        
+        <footer class="footer ">
+                <div class="content has-text-centered">
+                    <p><strong>Sit and take a Coffee </strong> by  <a href="https://www.linkedin.com/in/renanschmitt/">Renan Schmitt</a>.
+                    
+                    <br>
+                     <a href="https://bulma.io">
+                        <img src="https://bulma.io/images/made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
+                    </a>
+                </p>
+                </div>
+        </footer>
+            
+        
+
+</body>
+
 </html>
