--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -3,7 +3,7 @@
     <head>
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" href="stylesheet.csss">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
         <link rel="stylesheet" href="css/icon-font.css">
         <link rel="shortcut icon" type="image/png" href="images/logo.png">
@@ -16,7 +16,7 @@
                         <span class="heading-primary--main">Renan Schmitt</span>
                         <span class="heading-primary--sub">Sit and take a coffe</span>
                 </h1>
-                <a href="./noticias" class="btn btn--white btn--animated"> Acessar   </a>
+                <a href="./posts" class="btn btn--white btn--animated"> Acessar   </a>
             </div>
         </header>   
     </body>
