--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -18,7 +18,7 @@
         <div class="hero-body">
             <div class="container has-text-centered">
                 <div class="column is-4 is-offset-4">
-                    <h3 class="title has-text-black">UVASASA</h3>
+                    <h3 class="title has-text-black">Sit and take a coffee</h3>
                     <hr class="login-hr">
                     <p class="subtitle has-text-black">Please login to proceed.</p>
                     <div class="box">
