--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -7,14 +7,14 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
         <link rel="stylesheet" href="css/icon-font.css">
         <link rel="shortcut icon" type="image/png" href="images/logo.png">
-        <title>Renan Schmitt</title>
+        <title>Sit and take a Coffee</title>
     </head>
     <body>
         <header class="header">
             <div class="header__text-box">
                 <h1 class="heading-primary">
-                        <span class="heading-primary--main">Renan Schmitt</span>
-                        <span class="heading-primary--sub">Sit and take a coffe</span>
+                        <span class="heading-primary--main">Sit</span>
+                        <span class="heading-primary--sub"> and take a coffe</span>
                 </h1>
                 <a href="./posts" class="btn btn--white btn--animated"> Acessar   </a>
             </div>
