--- a/app/views/posts/posts.ejs
+++ b/app/views/posts/posts.ejs
@@ -76,15 +76,15 @@
 									</figure>
 							  
 									<div class="media-content has-text-centered">
-										<p class="title article-title" style="color: white"><%= postage[0].title %></p>
+										<p class="title article-title" style="color: white"><%= post.title %></p>
 										<div class="tags has-addons level-item">
-											<span class="tag is-rounded is-dark">@<%= postage[0].author %></span>
-										<span class="tag is-rounded"><%= postage[0].date %></span>
+											<span class="tag is-rounded is-dark">@<%= post.author %></span>
+										<span class="tag is-rounded"><%= post.date %></span>
 									</div>
 								</div>
 							</div>
 							<div class="message-body">
-								 <%= postage[0].content %>
+								 <%= post.content %>
 							</div>
 						</article>
 					</div>  
