Refatora as models

--- a/app/views/posts/postage.ejs
+++ b/app/views/posts/postage.ejs
@@ -48,13 +48,13 @@
     </nav>
     <!-- END NAV -->
 
-    <!-- <section class="hero is-primary is-medium is-bold">
+    <section class="hero is-primary is-medium is-bold">
         <div class="hero-body">
             <div class="container has-text-centered">
                 <h1 class="title">SIT AND TAKE A COFFEE</h1>
             </div>
         </div>
-    </section> -->
+    </section>
     <section class="articles">
 		
         <%if (postage == 0) { %>
@@ -93,8 +93,64 @@
 			   <!-- END ARTICLE -->
 				
 				</div>  
-		<% }%>
+        <% }%>
         
+        <!-- BEGINS COMMENTS-->
+        <article class="media">
+                <figure class="media-left">
+                  <p class="image is-64x64">
+                    <img src="https://farm9.staticflickr.com/8478/8219608433_54feff5dd3_b.jpg">
+                  </p>
+                </figure>
+                <div class="media-content">
+                  <div class="content">
+                    <p>
+                      <strong>Barbara Middleton</strong>
+                      <br>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis porta eros lacus, nec ultricies elit blandit non. Suspendisse pellentesque mauris sit amet dolor blandit rutrum. Nunc in tempus turpis.
+                      <br>
+                      <small><a>Like</a> · <a>Reply</a> · 3 hrs</small>
+                    </p>
+                  </div>
+        </article>
+        <article class="media">
+                <figure class="media-left">
+                  <p class="image is-64x64">
+                    <img src="https://cdn.pixabay.com/photo/2016/04/11/21/06/girl-1323075_960_720.jpg">
+                  </p>
+                </figure>
+                <div class="media-content">
+                  <div class="content">
+                    <p>
+                      <strong>Fernada Souza</strong>
+                      <br>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis porta eros lacus, nec ultricies elit blandit non. Suspendisse pellentesque mauris sit amet dolor blandit rutrum. Nunc in tempus turpis.
+                      <br>
+                      <small><a>Like</a> · <a>Reply</a> · 3 hrs</small>
+                    </p>
+                  </div>
+        </article>
+ 
+        <article class="media">
+                <figure class="media-left">
+                  <p class="image is-64x64">
+                    <img src="https://bulma.io/images/placeholders/128x128.png">
+                  </p>
+                </figure>
+                <div class="media-content">
+                  <div class="field">
+                    <p class="control">
+                      <textarea class="textarea" placeholder="Add a comment..."></textarea>
+                    </p>
+                  </div>
+                  <div class="field">
+                    <p class="control">
+                      <button class="button">Post comment</button>
+                    </p>
+                  </div>
+                </div>
+        </article>
+         <!-- END COMMENTS-->
 
 	</section>
        
