--- a/app/views/posts/postage.ejs
+++ b/app/views/posts/postage.ejs
@@ -38,8 +38,11 @@
                     </a>
                     <a class="navbar-item  " href="/posts">
                         Categorias
-                 </a>
-                    <a class="navbar-item" href="/formulario">
+                    </a>
+                    <a class="navbar-item" href="/newpostage">
+                      <button class="button is-link">Publicar</button>
+                  </a>
+                    <a class="navbar-item" href="/login">
                         <button class="button is-link">Login</button>
                     </a>
                 </div>
