--- a/app/views/posts/posts.ejs
+++ b/app/views/posts/posts.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Renan Schmitt</title>
     
-    <link rel="shortcut icon" href="../../images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../public/images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <!-- Bulma Version 0.8.x-->
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item" href="../">
-                        <img src="./../../images/logo.png" alt="Logo">
+                        <img src="./../../public/images/logo.png" alt="Logo">
                         
                     </a>
                 <span class="navbar-burger burger" data-target="navbarMenu">
@@ -75,7 +75,7 @@
 							  
 							<div class="message-header">
 									<figure class="image is-128x128">
-										<img class="is-rounded" src="./../../images/avatar.jpg">
+										<img class="is-rounded" src="./../../public/images/avatar.jpg">
 									</figure>
 							  
 									<div class="media-content has-text-centered">
@@ -110,7 +110,7 @@
                     
                     <br>
                      <a href="https://bulma.io">
-                        <img src="https://bulma.io/images/made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
+                        <img src="https://bulma.io/public/images/made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
                     </a>
                 </p>
                 </div>
