--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -12,7 +12,7 @@
   
   .header {
     height: 100vh;
-    background-image: linear-gradient(to right bottom, rgba(122, 122, 122, 0.795), rgba(24, 31, 29, 0.8)), url(./images/banner.jpg);
+    background-image: linear-gradient(to right bottom, rgba(122, 122, 122, 0.795), rgba(24, 31, 29, 0.8)), url(../images/banner.jpg);
     background-size: cover;
     background-position: top;
     position: relative; }
