--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -3,7 +3,7 @@
     <head>
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="stylesheet.csss">
+        <link rel="stylesheet" href="../public/css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
         <link rel="stylesheet" href="css/icon-font.css">
         <link rel="shortcut icon" type="image/png" href="images/logo.png">
@@ -14,7 +14,7 @@
             <div class="header__text-box">
                 <h1 class="heading-primary">
                         <span class="heading-primary--main">Sit</span>
-                        <span class="heading-primary--sub"> and take a coffe</span>
+                        <span class="heading-primary--sub"> and take a coffee</span>
                 </h1>
                 <a href="./posts" class="btn btn--white btn--animated"> Acessar   </a>
             </div>
