--- a/app/views/posts/posts.ejs
+++ b/app/views/posts/posts.ejs
@@ -42,7 +42,7 @@
                  <a class="navbar-item" href="/newpostage">
                     <button class="button is-primary">Publicar</button>
                 </a>
-                    <a class="navbar-item" href="/formulario">
+                    <a class="navbar-item" href="/login">
                         <button class="button is-link">Login</button>
                     </a>
                 </div>
