Adiciona classes nas models

--- a/app/views/login/loginpage.ejs
+++ b/app/views/login/loginpage.ejs
@@ -49,7 +49,9 @@
                     <p class="has-text-grey">
                         <a href="../">Sign Up</a> &nbsp;·&nbsp;
                         <a href="../">Forgot Password</a> &nbsp;·&nbsp;
-                        <a href="../">Need Help?</a>
+                        <a href="../">Need Help?</a><br>
+                        <a href="../posts"> Voltar para as postagens</a>
+
                     </p>
                 </div>
             </div>
