--- a/app/views/posts/postage.ejs
+++ b/app/views/posts/postage.ejs
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item" href="../">
-                        <img src="./../../images/logo.png" alt="Logo">
+                  <img src="./../../public/images/logo.png" alt="Logo">
                         
                     </a>
                 <span class="navbar-burger burger" data-target="navbarMenu">
@@ -40,7 +40,7 @@
                         Categorias
                     </a>
                     <a class="navbar-item" href="/newpostage">
-                      <button class="button is-link">Publicar</button>
+                      <button class="button is-primary">Publicar</button>
                   </a>
                     <a class="navbar-item" href="/login">
                         <button class="button is-link">Login</button>
