--- a/app/views/posts/posts.ejs
+++ b/app/views/posts/posts.ejs
@@ -68,7 +68,8 @@
            
 					<!-- START ARTICLE -->
 				   
-					<div class="media">
+                <a href="postage/<%=post.id%>">
+                    <div class="media">
 								
 					
 						<article class="message">
@@ -95,7 +96,8 @@
 							   
 			   <!-- END ARTICLE -->
 				
-				</div>  
+                </div>
+            </a>  
             <% })%>
 		<% }%>
         
