--- a/app/views/posts/posts.ejs
+++ b/app/views/posts/posts.ejs
@@ -58,7 +58,7 @@
             </div>
         </div>
     </section>
-    <section class="articles"  style="width: 70%; margin-left: 15%;">
+    <section class="articles"  style=" margin-left: 5%;">
 		
         <%if (posts == 0) { %>
             <p style="text-align: center; color: black; font-size: 400%">Não há posts registrados neste blog =/</p>
@@ -72,7 +72,7 @@
                     <div class="media">
 								
 					
-						<article class="message" style="width:90%">
+						<article class="message" style="width:100%">
 							  
 							<div class="message-header">
 									<figure class="image is-128x128">
