--- a/app/views/newpostage/form_add_postage.ejs
+++ b/app/views/newpostage/form_add_postage.ejs
@@ -61,30 +61,52 @@
         <!-- Inicio formulário de nova postagem-->
 
         
-    <form action="/savepost" method="post">
-       
-        <div class="field">
-            <label class="label">Publicar</label>
-            <div class="control">
-                    <input class="input" name="title" type="text" placeholder="Digite o titulo da sua publicação aqui">
+        <div class="column is-8 is-offset-2" style="margin-left: 19%">
+                <div class="media">
+                    <article class="message" style="width:100%">
+                          
+                        <div class="message-header">
+                                <figure class="image is-128x128">
+                                    <img class="is-rounded" src="./../../public/images/avatar.jpg">
+                                </figure>
+                          
+                                <div class="media-content has-text-centered">
+                                        <form action="/savepost" method="post">
+           
+                                            <div class="field" >
+                                                <label class="label">Publicar</label>
+                                                <div class="control">
+                                                        <input class="input" name="title" type="text" placeholder="Digite o titulo da sua publicação aqui">
+                                                </div>
+                                                <BR>
+                                                <div class="control">
+                                                    <textarea class="textarea" name="content" placeholder="Digite aqui o conteudo da sua publicação :D"></textarea>
+                                                </div>
+                                            </div>
+                                            <div class="field is-grouped">
+                                                <p class="control">
+                                                    <button class="button is-light">
+                                                        Cancelar
+                                                    </button>
+                                                    </p>
+                                                    <p class="control">
+                                                    <input type="submit" class="button is-primary">
+                                    
+                                                </p>
+                                            </div>
+                                        </form>
+                                    <div class="tags has-addons level-item">
+                                        <span class="tag is-rounded is-dark"></span>
+                                    <span class="tag is-rounded"></span>
+                                </div>
+                            </div>
+                        </div>
+    
+                    </article>
+                </div>  
             </div>
-            <BR>
-            <div class="control">
-                <textarea class="textarea" name="content" placeholder="Digite aqui o conteudo da sua publicação :D"></textarea>
-            </div>
-        </div>
-        <div class="field is-grouped">
-            <p class="control">
-                <button class="button is-light">
-                    Cancelar
-                </button>
-                </p>
-                <p class="control">
-                <input type="submit" class="button is-primary">
-
-            </p>
-        </div>
-    </form>
+    
+    
         <!-- Fim formulário de nova postagem-->
 
 
