Adiciona rota para post

--- a/app/views/newpostage/form_add_postage.ejs
+++ b/app/views/newpostage/form_add_postage.ejs
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Renan Schmitt</title>
+    <title>Publicar - Sit and Take a Coffee</title>
     
-    <link rel="shortcut icon" href="../../images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../public/images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <!-- Bulma Version 0.8.x-->
@@ -21,8 +21,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item" href="../">
-                        <img src="./../../images/logo.png" alt="Logo">
-                        
+                    <img src="./../../public/images/logo.png" alt="Logo">
                     </a>
                 <span class="navbar-burger burger" data-target="navbarMenu">
                         <span></span>
@@ -67,7 +66,7 @@
                           
                         <div class="message-header">
                                 <figure class="image is-128x128">
-                                    <img class="is-rounded" src="./../../public/images/avatar.jpg">
+                                    <img class="is-rounded" src="./../../public/images/user-image-default.png">
                                 </figure>
                           
                                 <div class="media-content has-text-centered">
