--- a/app/views/posts/postage.ejs
+++ b/app/views/posts/postage.ejs
@@ -71,11 +71,10 @@
 					<div class="media">
 								
 					
-						<article class="message">
-							  
+            <article class="message" style="width:100%">  
 							<div class="message-header">
 									<figure class="image is-128x128">
-										<img class="is-rounded" src="./../../images/avatar.jpg">
+                    <img class="is-rounded" src="./../../public/images/user-image-default.png">
 									</figure>
 							  
 									<div class="media-content has-text-centered">
