--- a/app/views/posts/posts.ejs
+++ b/app/views/posts/posts.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Renan Schmitt</title>
+    <title>Posts - Sit and Drink a Coffee</title>
     
     <link rel="shortcut icon" href="../../public/images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -68,7 +68,7 @@
         <% } else { %>
         <% posts.forEach(post => { %>
             <!-- START ARTICLE -->
-            <a href="postage/<%=post.id%>">
+            <a href="postage?<%= post.id %>">
 			<div class="column is-8 is-offset-2">
            
 				   
@@ -77,7 +77,7 @@
 							  
 							<div class="message-header">
 									<figure class="image is-128x128">
-										<img class="is-rounded" src="./../../public/images/avatar.jpg">
+										<img class="is-rounded" src="./../../public/images/user-image-default.png">
 									</figure>
 							  
 									<div class="media-content has-text-centered">
