--- a/app/views/posts/postage.ejs
+++ b/app/views/posts/postage.ejs
@@ -98,7 +98,7 @@
         <% }%>
         
         <!-- BEGINS COMMENTS-->
-        <article class="media">
+        <article class="media" style="width:100%">
                 <figure class="media-left">
                   <p class="image is-64x64">
                     <img src="https://farm9.staticflickr.com/8478/8219608433_54feff5dd3_b.jpg">
