--- a/app/views/login/loginpage.ejs
+++ b/app/views/login/loginpage.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Login - Free Bulma template</title>
+    <title> Login - Sit and Take a Coffee   </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
@@ -14,49 +14,51 @@
 </head>
 
 <body>
-    <section class="hero is-grey is-fullheight">
-        <div class="hero-body">
-            <div class="container has-text-centered">
-                <div class="column is-4 is-offset-4">
-                    <h3 class="title has-text-black">Sit and take a coffee</h3>
-                    <hr class="login-hr">
-                    <p class="subtitle has-text-black">Please login to proceed.</p>
-                    <div class="box">
-                        <figure class="avatar">
-                            <img width="40%" src="https://avatars3.githubusercontent.com/u/57189204?s=200&v=4">
-                        </figure>
-                        <form>
-                            <div class="field">
-                                <div class="control">
-                                    <input class="input is-large" type="email" placeholder="Your Email" autofocus="">
+    <form method="POST" action="/trylogin">
+            <section class="hero is-grey is-fullheight">
+            <div class="hero-body">
+                <div class="container has-text-centered">
+                    <div class="column is-4 is-offset-4">
+                        <h3 class="title has-text-black">Sit and take a coffee</h3>
+                        <hr class="login-hr">
+                        <p class="subtitle has-text-black">Please login to proceed.</p>
+                        <div class="box">
+                            <figure class="avatar">
+                                <img width="40%" src="https://avatars3.githubusercontent.com/u/57189204?s=200&v=4">
+                            </figure>
+                            <form>
+                                <div class="field">
+                                    <div class="control">
+                                        <input name="email" class="input is-large" type="email" placeholder="Your Email" autofocus="">
+                                    </div>
                                 </div>
-                            </div>
 
-                            <div class="field">
-                                <div class="control">
-                                    <input class="input is-large" type="password" placeholder="Your Password">
+                                <div class="field">
+                                    <div class="control">
+                                        <input name="password" class="input is-large" type="password" placeholder="Your Password">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="field">
-                                <label class="checkbox">
-                  <input type="checkbox">
-                  Remember me
-                </label>
-                            </div>
-                            <button class="button is-block is-primary is-large is-fullwidth">Login <i class="fa fa-sign-in" aria-hidden="true"></i></button>
-                        </form>
+                                <div class="field">
+                                    <label class="checkbox">
+                    <input type="checkbox">
+                    Remember me
+                    </label>
+                                </div>
+                                <button class="button is-block is-primary is-large is-fullwidth">Login <i class="fa fa-sign-in" aria-hidden="true"></i></button>
+                            </form>
+                        </div>
+                        <p class="has-text-grey">
+                            <a href="../">Sign Up</a> &nbsp;·&nbsp;
+                            <a href="../">Forgot Password</a> &nbsp;·&nbsp;
+                            <a href="../">Need Help?</a><br>
+                            <a href="../posts"> Voltar para as postagens</a>
+
+                        </p>
                     </div>
-                    <p class="has-text-grey">
-                        <a href="../">Sign Up</a> &nbsp;·&nbsp;
-                        <a href="../">Forgot Password</a> &nbsp;·&nbsp;
-                        <a href="../">Need Help?</a><br>
-                        <a href="../posts"> Voltar para as postagens</a>
-
-                    </p>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </form>
     <script async type="text/javascript" src="../js/bulma.js"></script>
 </body>
 
