--- a/app/views/posts/posts.ejs
+++ b/app/views/posts/posts.ejs
@@ -39,7 +39,7 @@
                     <a class="navbar-item  " href="/posts">
                         Categorias
                  </a>
-                 <% var login = 1 %>
+                 <% var login; %>
                  <% if (login == "1") { %>
                     <a class="navbar-item">
                         <img class="is-rounded" src="./../../public/images/user-image-default.png">
