--- a/app/views/newpostage/form_add_postage.ejs
+++ b/app/views/newpostage/form_add_postage.ejs
@@ -16,13 +16,13 @@
 </head>
 
 <body>
-    <!-- START NAV -->
-    <nav class="navbar is-dark">
+   <!-- START NAV -->
+   <nav class="navbar is-light">
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item" href="../">
                     <img src="./../../public/images/logo.png" alt="Logo">
-                    </a>
+                </a>
                 <span class="navbar-burger burger" data-target="navbarMenu">
                         <span></span>
                 <span></span>
@@ -37,20 +37,34 @@
                     </a>
                     <a class="navbar-item  " href="/posts">
                         Categorias
+                     </a>
+                 <% var login %>
+                 <% if (!login) { %>
+                    <a class="navbar-item">
+                        <img class="is-rounded" src="./../../public/images/user-image-default.png">
+                     </a>
+                     <a class="navbar-item" href="/newpostage">
+                        <button class="button is-primary">Publicar</button>
                     </a>
+                 <% } else {  %>
+
                     <a class="navbar-item" href="/newpostage">
-                      <button class="button is-primary">Publicar</button>
-                  </a>
+                        <button class="button is-primary">Publicar</button>
+                    </a>
+                
                     <a class="navbar-item" href="/login">
                         <button class="button is-link">Login</button>
                     </a>
+
+               <% } %>
                 </div>
             </div>
         </div>
     </nav>
     <!-- END NAV -->
 
-    <section class="hero is-primary is-medium is-bold">
+
+    <section class="hero is-info is-medium is-bold">
         <div class="hero-body">
             <div class="container has-text-centered">
                 <h1 class="title">SIT AND TAKE A COFFEE</h1>
@@ -62,17 +76,17 @@
         
         <div class="column is-8 is-offset-2" style="margin-left: 19%">
                 <div class="media">
-                    <article class="message" style="width:100%">
+                    <article class="message is-info" style="width:100%">
                           
                         <div class="message-header">
                                 <figure class="image is-128x128">
                                     <img class="is-rounded" src="./../../public/images/user-image-default.png">
                                 </figure>
                           
-                                <div class="media-content has-text-centered">
+                                <div class="media-content has-text-centered ">
                                         <form action="/savepost" method="post">
            
-                                            <div class="field" >
+                                            <div class="field " >
                                                 <label class="label">Publicar</label>
                                                 <div class="control">
                                                         <input class="input" name="title" type="text" placeholder="Digite o titulo da sua publicação aqui">
