Muda sistema de comentários

--- a/app/views/login/loginpage.ejs
+++ b/app/views/login/loginpage.ejs
@@ -24,7 +24,7 @@
                         <p class="subtitle has-text-black">Please login to proceed.</p>
                         <div class="box">
                             <figure class="avatar">
-                                <img width="40%" src="https://avatars3.githubusercontent.com/u/57189204?s=200&v=4">
+                                <img width="40%" src="./../../public/images/logo.png">
                             </figure>
                             <form>
                                 <div class="field">
