--- a/app/views/posts/postage.ejs
+++ b/app/views/posts/postage.ejs
@@ -107,10 +107,10 @@
               </div>
                <!-- BEGINS COMMENTS-->
       
-        <article class="media" style="width:100%">
+        <article class="media">
                 <figure class="media-left">
                   <p class="image is-64x64">
-                    <img src="https://farm9.staticflickr.com/8478/8219608433_54feff5dd3_b.jpg">
+                    <img class=" is-rounded" src="https://farm9.staticflickr.com/8478/8219608433_54feff5dd3_b.jpg">
                   </p>
                 </figure>
                 <div class="media-content">
@@ -120,32 +120,16 @@
                       <br>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis porta eros lacus, nec ultricies elit blandit non. Suspendisse pellentesque mauris sit amet dolor blandit rutrum. Nunc in tempus turpis.
                       <br>
-                      <small><a>Like</a> · <a>Reply</a> · 3 hrs</small>
+                      <small><a>Reply</a> · 3 hrs</small>
                     </p>
                   </div>
         </article>
-        <article class="media">
-                <figure class="media-left">
-                  <p class="image is-64x64">
-                    <img src="https://cdn.pixabay.com/photo/2016/04/11/21/06/girl-1323075_960_720.jpg">
-                  </p>
-                </figure>
-                <div class="media-content">
-                  <div class="content">
-                    <p>
-                      <strong>Fernada Souza</strong>
-                      <br>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis porta eros lacus, nec ultricies elit blandit non. Suspendisse pellentesque mauris sit amet dolor blandit rutrum. Nunc in tempus turpis.
-                      <br>
-                      <small><a>Like</a> · <a>Reply</a> · 3 hrs</small>
-                    </p>
-                  </div>
-        </article>
+
  
         <article class="media">
                 <figure class="media-left">
                   <p class="image is-64x64">
-                    <img src="https://bulma.io/images/placeholders/128x128.png">
+                    <img class="is-rounded" src="./../../public/images/user-image-default.png">
                   </p>
                 </figure>
                 <div class="media-content">
