--- a/app/views/posts/posts.ejs
+++ b/app/views/posts/posts.ejs
@@ -17,7 +17,7 @@
 
 <body>
     <!-- START NAV -->
-    <nav class="navbar is-dark">
+    <nav class="navbar is-light">
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item" href="../">
