--- a/app/views/posts/postage.ejs
+++ b/app/views/posts/postage.ejs
@@ -122,7 +122,7 @@
                       <br>
                       <%= comment.content %>
                       <br>
-                      <small> 3 hrs</small>
+                      <small>3 hrs</small>
                     </p>
                   </div>
         </article>
@@ -131,6 +131,9 @@
        
          <!-- END COMMENTS-->
          <% })%>
+
+         <!-- BEGINS FORMS SEND COMMENT-->
+         <form action="/newcomment" method="post">
          <article class="media">
             <figure class="media-left">
               <p class="image is-64x64">
@@ -140,18 +143,21 @@
             <div class="media-content">
               <div class="field">
                 <p class="control">
-                  <textarea class="textarea" placeholder="Add a comment..."></textarea>
+                  <textarea name="commentText" class="textarea" placeholder="Add a comment..."></textarea>
                 </p>
+
+                <input name="id_post" type="hidden" value="<%= postage[0].id %>">
               </div>
               <div class="field">
                 <p class="control">
-                  <button class="button">Comentar</button>
+                  <button type="submit" class="button">Comentar</button>
                 </p>
               </div>
             </div>
            </article>
 						</article>
-					</div>  
+          </div>
+        </form>  
 				
 							   
 			   <!-- END ARTICLE -->
