--- a/app/views/posts/postage.ejs
+++ b/app/views/posts/postage.ejs
@@ -122,7 +122,7 @@
                       <br>
                       <%= comment.content %>
                       <br>
-                      <small>3 hrs</small>
+                      <small><%= comment.date %></small>
                     </p>
                   </div>
         </article>
