--- a/app/views/posts/posts.ejs
+++ b/app/views/posts/posts.ejs
@@ -73,7 +73,7 @@
 
     <section class="articles"  style=" margin-left: 5%;">
         <%if (posts == 0) { %>
-            <p style="text-align: center; color: black; font-size: 400%">Não há posts registrados neste blog =/</p>
+            <p style="text-align: center; color: black; font-size: 400%">Lamentamos, mas parece que não há posts registrados =/</p>
         <% } else { %>
         <% posts.forEach(post => { %>
             <!-- START ARTICLE -->
